Oct 09, 2023
  renamed 'master' to 'main'

Mar 03, 2023
  renamed distro to 'strain-synonym-fix-pipeline'

Jan 24, 2023
  upgraded commons-dbcp from 1.x to 2.x

Jan 16, 2023
  updated ojdbc dependency
  improved logging

Jan 10, 2023
  updated build.gradle to be gradle 6.x+ compatible

Dec 20, 2021
  upgraded log4j to avoid zero day exploit

May 10, 2020
  updated jar dependencies

2.0.1 - 2019-01-28
  updated build.gradle

2.0.0 - 2018-10-10
  updated to use spring framework to load properties