@@ -1,3 +1,9 @@
 # strain-synonym-fix-pipeline
 
+GOAL 1
+======
 A program to replace "||" and "," separators into ; in ALIASES table for aliases of type 'old_strain_symbol' and 'old_strain_name'
+
+GOAL 2
+======
+Transfer strain descriptions, synonyms and xrefs from strain objects to strain ontology.
