@@ -23,13 +23,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-net:commons-net:3.9.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.4.0.0'
-    implementation 'org.springframework:spring-beans:5.3.0'
-    implementation 'org.springframework:spring-jdbc:5.3.0'
+    implementation 'org.apache.commons:commons-dbcp2:2.10.0'
+    implementation 'commons-net:commons-net:3.10.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.26.0.0'
+    implementation 'org.springframework:spring-jdbc:6.0.23'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
